<resources>
    <string name="app_name">HomeWork4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="add">Добавить</string>
    <string name="cancellation">Отмена</string>
</resources>